<resources>
    <string name="app_name">
        <b>Puissance 4</b>
    </string>
    <string name="sub_title">
        Alignez
        <b>4 jetons</b>
        pour gagner la partie.
    </string>
    <string name="start">Commencer</string>
    <string name="restart">Recommencer</string>
    <string name="j1">Joueur jaune</string>
    <string name="j2">Joueur rouge</string>
    <string name="current_player">
        , à toi de jouer !
    </string>
    <string name="menu_txt">Si t’as pas d’amis,</string>
    <string name="menu_txt2"> joue contre l’intelligence artificielle.</string>
    <string name="singleplayer">Jouer contre l\'ia</string>
    <string name="multiplayer">Jouer à deux</string>
</resources>