<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessLeaf"
        android:background="@color/blue"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/title_size"
            tools:ignore="SpUsage,UnusedAttribute"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/title_top_mar"

            >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_title"
            android:textSize="@dimen/sub_title_size"
            android:textColor="@color/light_light_blue"
            android:layout_marginTop="@dimen/sub_title_top_mar"
            android:layout_marginLeft="@dimen/sub_title_margin"
            android:layout_marginRight="@dimen/sub_title_margin"
            android:textAlignment="center"
            tools:ignore="SpUsage"
            >

        </TextView>

        <LinearLayout
            android:tag="test"
            android:id="@+id/test"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"

            >

            <LinearLayout
                android:tag="player1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:layout_marginRight="@dimen/players_pad"
                android:layout_marginLeft="@dimen/players_pad"
                android:layout_marginBottom="@dimen/player1_mar_bot"
                android:layout_marginTop="@dimen/player1_mar_top"
                >

                <LinearLayout
                    android:tag="red_piece"
                    android:layout_width="@dimen/players_inputs_height"
                    android:layout_height="@dimen/players_inputs_height"
                    android:background="@drawable/red_piece"
                    />

                <EditText
                    android:id="@+id/player1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/players_inputs_height"
                    android:layout_marginRight="@dimen/sub_title_margin"
                    android:layout_marginLeft="@dimen/sub_title_margin"
                    android:autofillHints="Joueur rouge"
                    android:inputType="text"
                    tools:ignore="LabelFor,RtlSymmetry"
                    android:textColor="@color/black"
                    android:hint="@string/j1"
                    android:background="@android:color/transparent"
                    />

            </LinearLayout>

            <LinearLayout
                android:tag="player2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:layout_marginRight="@dimen/players_pad"
                android:layout_marginLeft="@dimen/players_pad"
                android:layout_marginBottom="@dimen/inputj2_mar_bot"

                >

                <LinearLayout
                    android:tag="yellow_piece"
                    android:layout_width="@dimen/players_inputs_height"
                    android:layout_height="@dimen/players_inputs_height"
                    android:background="@drawable/yellow_piece"
                    />

                <EditText
                    android:id="@+id/player2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/players_inputs_height"
                    android:layout_marginRight="@dimen/sub_title_margin"
                    android:layout_marginLeft="@dimen/sub_title_margin"
                    android:autofillHints="Joueur jaune"
                    tools:ignore="LabelFor,RtlSymmetry"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:hint="@string/j2"
                    android:background="@android:color/transparent"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                >
                <Button
                    android:tag="start_btn"
                    android:id="@+id/start_game"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/players_inputs_height"
                    android:text="@string/start"
                    android:layout_marginBottom="@dimen/button_mar_bot"
                    android:background="@drawable/start_btn_shape"
                    android:backgroundTint="@color/light_light_blue"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>