<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".MultiplayerActivity">

    <LinearLayout android:id="@+id/ll1" android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center_horizontal" android:orientation="vertical" tools:ignore="ExtraText,UselessLeaf" android:background="@color/blue">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sub_title" android:textSize="@dimen/sub_title_size" android:textColor="@color/light_light_blue" android:layout_marginTop="@dimen/title_top_mar" android:layout_marginLeft="@dimen/sub_title_margin" android:layout_marginRight="@dimen/sub_title_margin" android:textAlignment="center" tools:ignore="SpUsage" />

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" tools:ignore="LineUsage" android:orientation="horizontal" android:gravity="center_horizontal">

            <TextView android:id="@+id/player_name" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/sub_title_size" android:textColor="@color/light_light_blue" android:layout_marginTop="@dimen/button_mar_bot" tools:ignore="SpUsage" />

            <TextView android:id="@+id/message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="@dimen/sub_title_size" android:textColor="@color/light_light_blue" android:layout_marginTop="@dimen/button_mar_bot" tools:ignore="SpUsage" android:text="@string/current_player" />

        </LinearLayout>

        <LinearLayout android:id="@+id/current_color" android:layout_height="40sp" android:layout_width="40sp" android:layout_marginTop="13sp" android:background="@drawable/red_piece" android:orientation="horizontal" />

        <LinearLayout android:tag="game" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:gravity="bottom">

            <LinearLayout android:tag="board" android:id="@+id/board" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center_horizontal" />

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center_horizontal">
                <Button android:tag="restart_btn" android:id="@+id/restart_game" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/restart" android:layout_marginBottom="@dimen/button_mar_bot" android:layout_marginTop="@dimen/button_mar_bot" android:background="@drawable/start_btn_shape" android:backgroundTint="@color/light_light_blue" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>